--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,20 @@
 
   <groupId>io.github.atg-stubs</groupId>
   <artifactId>atg-stubs</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>10.2.0-SNAPSHOT</version>
 
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
+      <version>1.2</version>
+    </dependency>
+  </dependencies>
 </project>
