--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
   - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | gpg --batch --import; fi
   - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | gpg --batch --import-ownertrust; fi
 
+install: true
 
-script:
- - mvn clean deploy --settings .travis/settings.xml -B -U
+script: mvn clean deploy --settings .travis/settings.xml -B -U
