--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <developer>
       <id>drdamour</id>
       <name>drdamour</name>
-      <email>drdamour@gamil.com</email>
-      <url>http://talkshowhost.net</url>
+      <email>drdamour@gmail.com</email>
+      <url>https://talkshowhost.net</url>
     </developer>
   </developers>
 
@@ -110,6 +110,13 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.2</version>
       </plugin>
 
     </plugins>
