--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: java
+
+#per  https://docs.travis-ci.com/user/reference/trusty/#jvm-clojure-groovy-java-scala-images this is now required in trusty builds
+addons:
+  apt:
+    packages:
+      - openjdk-6-jdk
 jdk:
  - openjdk6
 
